# UnleashedRecomp_Android

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  apply_patches.sh  apply_xenos_fix.py  benchmark_find_modifier  benchmark_iso  benchmark_iso.cpp  benchmark_iso_parsing  benchmark_optimization  benchmark_optimization.cpp  benchmark_test  build_android.sh  build_fix.py  build_tools.sh  check_override.cpp  check_script.sh  code_review_query.txt  code_review_request.txt  commit_msg.txt  definitive_fix.py  definitive_robust_patch.py  final_fix_v8.py  final_patch.py  final_surgical_fix.py  final_surgical_patch.py  final_surgical_v2.py  fix.py  fix_all.py  fix_all_v9.py  fix_comprehensive.py  fix_definitive.py  fix_final_v6.py  fix_final_v7.py  fix_xenon.py  fix_xenon_v3.py  fix_xenon_v4.py  fix_xenon_v5.py  (+39 more)
.github/workflows/: main.yml  release.yml  validate-external.yml  validate-internal.yml  validate.yml
UnleashedRecomp/: CMakeLists.txt  app.cpp  decompressor.h  framework.h  main.cpp  main.cpp.patch  mutex.h  stdafx.h
UnleashedRecomp/apu/: audio.cpp
UnleashedRecomp/apu/driver/: oboe_driver.cpp  sdl2_driver.cpp
UnleashedRecomp/cpu/: guest_stack_var.h  guest_thread.cpp
UnleashedRecomp/data/: aspect_ratio.json
UnleashedRecomp/gpu/: guest_resource.h  video.cpp  video.h  video_utils.h  vulkan_utils.cpp
UnleashedRecomp/gpu/imgui/: imgui_snapshot.h
UnleashedRecomp/hid/: hid.h
UnleashedRecomp/hid/driver/: sdl_hid.cpp
UnleashedRecomp/install/: directory_file_system.h  installer.cpp  installer.cpp_new  installer.h  iso_file_system.cpp  iso_file_system.h  update_checker.cpp  version_utils.cpp  version_utils.h  virtual_file_system.h  xcontent_file_system.cpp  xcontent_file_system.h
UnleashedRecomp/install/hashes/: apotos_shamar.cpp  apotos_shamar.h  chunnan.cpp  chunnan.h  empire_city_adabat.cpp  empire_city_adabat.h  game.cpp  game.h  holoska.cpp  holoska.h  mazuri.cpp  mazuri.h  spagonia.cpp  spagonia.h  update.cpp  update.h
UnleashedRecomp/kernel/: audio.cpp  audio.h  crypto.cpp  crypto.h  freelist.h  function.h  heap.cpp  heap.h  imports.cpp  memory.cpp  memory.h  net.cpp  net.h  synchronization.cpp  synchronization.h  threading.cpp  threading.h  utilities.cpp  utilities.h  video.cpp  video.h  xam.cpp  xam.h
UnleashedRecomp/kernel/io/: file_system.cpp  nt.cpp  nt.h
UnleashedRecomp/locale/: locale.cpp
UnleashedRecomp/mod/: ini_file.inl  mod_loader.cpp
UnleashedRecomp/os/: logger.h  process.h  registry.h
UnleashedRecomp/os/android/: asset_extractor.cpp  asset_extractor.h  logger_android.cpp  media_android.cpp  perf_android.cpp  perf_android.h  process_android.cpp  registry_android.inl  version_android.cpp
UnleashedRecomp/patches/: CHudPause_patches.cpp  aspect_ratio_patches.cpp  audio_internal.h  audio_patches.cpp  input_patches.cpp  misc_patches.cpp
UnleashedRecomp/tests/: CMakeLists.txt  SWA.inl  benchmark_buffer_upload.cpp  benchmark_heap.cpp  benchmark_iso_fs.cpp  benchmark_iso_parsing.cpp  benchmark_mod_loader_optimization.cpp  build_and_run.sh  guest_resource_test.cpp  guest_stack_var_test.cpp  mock_swa_minimal.h  test_achievement_manager.cpp  test_config.cpp  test_decompressor.cpp  test_directory_file_system.cpp  test_freelist.cpp  test_heap.cpp  test_iso_file_system.cpp  test_memory.cpp  test_mod_loader_lzx.cpp  test_mutex.cpp  test_os_process.cpp  test_ruby_utils.cpp  test_string_holder.cpp  test_string_utils.cpp  test_text_wrap.cpp  test_update_unit.cpp  test_version_utils.cpp  test_xex_security.cpp
UnleashedRecomp/tests/mock/: xbox.h  xex.h
UnleashedRecomp/tests/mock/api/Hedgehog/Base/System/: hhAllocator.h
UnleashedRecomp/tests/mock/kernel/: heap.h  memory.h  memory_mock.h
UnleashedRecomp/tests/mock/os/: logger.h
UnleashedRecomp/tests/mock/ui/: achievement_overlay.h
UnleashedRecomp/tests/mock/user/: config.h  paths.h
UnleashedRecomp/ui/: achievement_menu.cpp  achievement_menu.h  achievement_overlay.cpp  imgui_utils.cpp  imgui_utils.h  installer_wizard.cpp  installer_wizard.h  installer_wizard.h_patch  options_menu.cpp  ruby_utils.cpp  ruby_utils.h  string_utils.cpp  string_utils.h  text_wrap_utils.cpp  text_wrap_utils.h  touch_controls.cpp  touch_controls.h
UnleashedRecomp/user/: achievement_data.cpp  achievement_manager.cpp  achievement_manager.h  config.cpp  config.h  config_def.h  config_def.inl  config_scancode.inl  paths.cpp  paths.h
UnleashedRecompLib/: CMakeLists.txt
UnleashedRecompLib/shader/: shader_cache.cpp  shader_cache.h
android/: build.gradle
android/app/: build.gradle  build.gradle_patch  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
build_overrides/tools/XenonRecomp/XenonAnalyse/: CMakeLists.txt  function.cpp
build_overrides/tools/XenonRecomp/XenonRecomp/: CMakeLists.txt  recompiler.cpp  recompiler.h
build_overrides/tools/XenonRecomp/XenonTests/: CMakeLists.txt  (+1 more)
build_overrides/tools/XenosRecomp/XenosRecomp/: CMakeLists.txt  main.cpp  shader_recompiler.cpp
build_overrides/tools/file_to_c/: file_to_c.cpp
build_xenon_recomp/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
build_xenon_recomp/XenonAnalyse/: TestFallthrough  cmake_install.cmake
build_xenon_recomp/XenonRecomp/: cmake_install.cmake
build_xenon_recomp/XenonTests/: cmake_install.cmake
build_xenon_recomp/XenonUtils/: cmake_install.cmake
docs/: BUILDING.md
mock_includes/ppc/: ppc_recomp_shared.h
mock_input/: test.shader
patches/: hh_string_holder_fix.patch  nfd_android.patch  remove_gold_linker_flags.patch  sdl_android_fixes.patch  swa_input_state_fix.patch  xenon_recomp_absolute_branch.patch  xenon_recomp_fixes.patch  xenos_recomp_fixes.patch
test_user_data/save/: ACH-DATA
tests/: benchmark_installer_optimization.cpp
tests/mock/: CGeneralWindow.h  CSoundAdministrator.h
tools/: CMakeLists.txt  extract_stfs.py  extract_xgd.py
tools/bc_diff/: bc_diff.cpp
tools/file_to_c/: file_to_c.cpp
tools/fshasher/: CMakeLists.txt  fshasher.cpp
vcpkg/triplets/: arm64-android.cmake
(+31 files in other folders)
